Fix firefox scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,16 @@
   }
 }
 
+html {
+  @apply scrollbar-hide;
+
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
+}
+
 @layer base {
   * {
     @apply border-border;
@@ -221,7 +231,6 @@ body {
   max-width: 100vw;
   width: 100%;
   height: 100%;
-  overflow: auto;
   line-height: 0.5 !important;
 }
 
